--- a/_posts/hidden/2017-12-17-驿站简介.md
+++ b/_posts/hidden/2017-12-17-驿站简介.md
@@ -10,27 +10,27 @@ tags:
 
 1.  进入驿站
 
-![](/assets/驿站简介/1.png)
+![](../../assets/2017-%E9%A9%BF%E7%AB%99%E7%AE%80%E4%BB%8B/1.png)
 
 2.  注册账户并登录
 
-![](/assets/驿站简介/2.png)
+![](../../assets/2017-%E9%A9%BF%E7%AB%99%E7%AE%80%E4%BB%8B/2.png)
 
 3.  下载API文件，注意点击保留
 
-![](/assets/驿站简介/3.png)
+![](../../assets/2017-%E9%A9%BF%E7%AB%99%E7%AE%80%E4%BB%8B/3.png)
 
 4.  打开文件夹查看文件是否正常
 
-![](/assets/驿站简介/4.png)
+![](../../assets/2017-%E9%A9%BF%E7%AB%99%E7%AE%80%E4%BB%8B/4.png)
 
 5.  开始菜单打开idel
 
-![](/assets/驿站简介/5.png)
+![](../../assets/2017-%E9%A9%BF%E7%AB%99%E7%AE%80%E4%BB%8B/5.png)
 
 6.  新建文件
 
-![](/assets/驿站简介/6.png)
+![](../../assets/2017-%E9%A9%BF%E7%AB%99%E7%AE%80%E4%BB%8B/6.png)
 
 7.  输入代码，代码可拷贝：
 
@@ -48,30 +48,30 @@ tags:
     run()
     ```
 
-![](/assets/驿站简介/7.png)
+![](../../assets/2017-%E9%A9%BF%E7%AB%99%E7%AE%80%E4%BB%8B/7.png)
 
 8.  保存文件
 
-![](/assets/驿站简介/8.png)
+![](../../assets/2017-%E9%A9%BF%E7%AB%99%E7%AE%80%E4%BB%8B/8.png)
 
 9.  保证和之前下载的api文件保存在同一目录下
 
-![](/assets/驿站简介/9.png)
+![](../../assets/2017-%E9%A9%BF%E7%AB%99%E7%AE%80%E4%BB%8B/9.png)
 
 10.  运行代码
 
-![](/assets/驿站简介/10.png)
+![](../../assets/2017-%E9%A9%BF%E7%AB%99%E7%AE%80%E4%BB%8B/10.png)
 
 11.  如果一切正常，会显示**开始运行...**
 
-![](/assets/驿站简介/11.png)
+![](../../assets/2017-%E9%A9%BF%E7%AB%99%E7%AE%80%E4%BB%8B/11.png)
 
 12.  回到驿站网站，点击按钮即会关机。
 
-![](/assets/驿站简介/12.png)
+![](../../assets/2017-%E9%A9%BF%E7%AB%99%E7%AE%80%E4%BB%8B/12.png)
 
 13.  你也可以用手机扫描二维码登录后进行控制。
 
-![](/assets/驿站简介/13.png)
+![](../../assets/2017-%E9%A9%BF%E7%AB%99%E7%AE%80%E4%BB%8B/13.png)
 
 Enjoy~
