[UPDATE] new post

--- a/_posts/2021-06-07-基于Python的图片存储原理展示小工具.md
+++ b/_posts/2021-06-07-基于Python的图片存储原理展示小工具.md
@@ -7,5 +7,18 @@ mathjax: true
 tags:
   - python
   - 教学工具
+  - pydao
 ---
+
+#### 缘起
+
+关于图像存储原理和图像存储容量计算，其实是一个不太难的知识点，但还是会遇到较多同学由于缺少具体的操作反馈偶尔会迷糊的情况，所以特意做了这个展示小工具，可以配合课程使用。
+
+#### 展示
+
+![](/assets/pydao/npdraw.gif)
+
+#### 下载地址
+
+[pydao/npdraw\_mixed.py at master · RainGather/pydao (github.com)](https://github.com/RainGather/pydao/blob/master/2-%E5%9B%BE%E5%83%8F%E7%BC%96%E7%A0%81/npdraw_mixed.py)
 
